Updated Accaunt and Personal information controllers
